[package]
name = "questions_answered"
version = "0.1.0"
edition = "2021"

[dependencies]
handle-errors = { path = "handle-errors" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39", features = ["full"] }
warp = "0.3"
uuid = { version = "1.10", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
